--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -8,4 +8,9 @@
 	<string name="action_bar_remove_text">Remove</string>
 	<string name="switch_search_text">Search</string>
 	<string name="switch_manual_text">Manual Entry</string>
+	<string name="product_name_hint">Product Name</string>
+	<string name="brand_name_hint">Brand Name</string>
+	<string name="size_description_hint">Size Description</string>
+	<string name="ounces_or_count_hint">Ounces/Count</string>
+	<string name="quantity_button_text">Quantity</string>
 </resources>
