Refactored for Android Studio

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
 	<string name="ounces_or_count_hint">Ounces/Count</string>
 	<string name="quantity_button_text">Quantity</string>
 	<string name="submit_button_text">Submit</string>
+    <string name="search_hint">Product Name/Brand Name</string>
 </resources>
