--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -17,6 +17,6 @@
 	<string name="zip_code_hint">Zip Code</string>
 	<string name="store_name_hint">Store Name</string>
 	<string name="submit_button_text">Submit</string>
-    <string name="search_hint">Product Name/Brand Name</string>
+    <string name="product_brand_search_hint">Product Name/Brand Name</string>
     <string name="grocery_list_submit_toast">A product has been added to your grocery list.</string>
 </resources>
