Changed to an Add button on the product activity instead of Submit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,6 @@
 	<string name="grocery_list_button_text">Grocery List</string>
 	<string name="wts_button_text">Where to Shop</string>
 	<string name="contributor_button_text">Contribute!</string>
-	<string name="action_bar_add_text">Add</string>
 	<string name="action_bar_remove_text">Remove</string>
 	<string name="switch_search_text">Search</string>
 	<string name="switch_manual_text">Manual Entry</string>
@@ -17,6 +16,7 @@
 	<string name="zip_code_hint">Zip Code</string>
 	<string name="store_name_hint">Store Name</string>
 	<string name="submit_button_text">Submit</string>
+	<string name="add_button_text">Add</string>
     <string name="product_brand_search_hint">Product Name/Brand Name</string>
     <string name="grocery_list_submit_toast">A product has been added to your grocery list.</string>
 </resources>
