--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
 	<string name="store_name_hint">Store Name</string>
 	<string name="submit_button_text">Submit</string>
 	<string name="add_button_text">Add</string>
+    <string name="contribute_button_text">Contribute Price</string>
     <string name="product_brand_search_hint">Product Name/Brand Name</string>
     <string name="grocery_list_submit_toast">A product has been added to your grocery list.</string>
 </resources>
